--- a/exercise/physics/General Physics I/HW5/GP1 HW5.tex
+++ b/exercise/physics/General Physics I/HW5/GP1 HW5.tex
@@ -40,9 +40,20 @@
 \begin{document}
 \maketitle
 \begin{problem}[Kinetic Energy Machine]
-    
+    If there exisis a heigher speed than reversible machine, than we can use the rest energy to do work. Then we can use the reversible machine to restore the higher speed. That means we can use this system to get energy forever. That contradicts to the impossibility of perpetual motion machine.
+
+    Similarly, if two reversible machine have different speed, then we can use the differece of the speed to do work. That also leads to a contradiction.
 \end{problem}
 \begin{problem}[Total Energy of a Many-particle System]
+    Since the interaction only depens on their distance, we can write the forcw into the form of 
+    \begin{equation}
+        \mathbf{F}_{ij}=-\nabla_i U\left(\left|\mathbf{r}_{ij}\right|\right).
+    \end{equation}
+    Then, the total energy can be weitten as
+    \begin{equation}
+        E=\frac{1}{2}\sum_{ij}U_{ij}+\sum_i m_ig z_i,
+    \end{equation}
+    where $z_i$ is the height of the $i$th particle.
     
 \end{problem}
 \begin{problem}[Stability of a cube balanced on a cylinder]
