--- a/saved material/extra/Nabla Operator/Nabla Operator.tex
+++ b/saved material/extra/Nabla Operator/Nabla Operator.tex
@@ -73,7 +73,7 @@ Let $\mathbf{T}$ be a tensor, then we define the gradient of the tensor as
 \section{Divergence}
 Note that 
 \begin{equation}
-    \frac{\pa \sqrt{g}}{\pa x^i}=\Gamma_{ji}^i\sqrt{g},
+    \frac{\pa \sqrt{g}}{\pa x^i}=\Gamma_{ji}^j\sqrt{g},
 \end{equation}
 we have 
 \begin{equation}
