--- a/fundamental algebra and analysis/fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/fundamental algebra and analysis.tex
@@ -52,13 +52,15 @@
 
 
 
-%\include{Chapters/Chapter 1}
-%\include{Chapters/Chapter 2}
-%\include{Chapters/Chapter 3}
-%\include{Chapters/Chapter 4}
-%\include{Chapters/Chapter 5}
-%\include{Chapters/Chapter 6}
+\include{Chapters/Chapter 1}
+\include{Chapters/Chapter 2}
+\include{Chapters/Chapter 3}
+\include{Chapters/Chapter 4}
+\include{Chapters/Chapter 5}
+\include{Chapters/Chapter 6}
 \include{Chapters/Chapter 7}
+\include{Chapters/Chapter 8}
+
 
 
 
