--- a/fundamental algebra and analysis/封装模板.tex
+++ b/fundamental algebra and analysis/封装模板.tex
@@ -38,6 +38,7 @@
 \newcommand{\ZZ}{\mathbb{Z}} % 黑板粗体Z
 \newcommand{\NN}{\mathbb{N}} % 黑板粗体N
 \newcommand{\dis}{\displaystyle}
+\newcommand{\pl}{|\!|}
 % 该文件包含了自定义符号的设置，格式为\newcommand{\⟨符号名⟩}{⟨符号内容⟩}，如\newcommand{\R}{\mathbb{R}}表示实数集
 % ————————————————————————————————————自定义颜色————————————————————————————————————
 \definecolor{mlv}{RGB}{40, 137, 124} % 墨绿
