--- a/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
+++ b/Quantum Mechanics/Quantum Mechanics Technology Processing and Conclusions/Quantum Mechanics Technology Processing and Conclusions.tex
@@ -1068,6 +1068,14 @@ Then we can deduce that
 \begin{equation}
     J_\pm\ket{j,m}=\sqrt{\left(j\mp m\right)\left(j\pm m+1\right)}\hbar\ket{j,m},
 \end{equation}
+\textbf{Important result}: If $[K,\mathbf{J}]=0$, then $K\ket{j,m}$ is also a eigenket of $\mathbf{J}^2$ and $J_z$. So,
+\begin{equation}
+    \bra{j',m'}K\ket{j,m}=\delta_{j'j}\delta_{m'm}f(j,m).
+\end{equation}
+By using $\mathbf{J}_{\pm}$, we can prove that 
+\begin{equation}
+    \bra{j,m+1}K\ket{j,m+1}=\bra{j,m}K\ket{j,m}.
+\end{equation}
 
 \subsection{Representations of the Rotation Operator}
 If an arbitrary $y$-axis is rotated around the arbitrary $z$-axis by $\alpha$ to become $y'$, then for any angle $\beta$, then\footnote{$R$ also means rotation.}
@@ -1150,4 +1158,20 @@ Use \eqref{13.48} to normalize,
     \int_{0}^{\pi}\sin^{2l}\theta \sin\theta \dd{\theta}=B\left(l+1,\frac{1}{2}\right)=\frac{\Gamma\left(l+1\right)\Gamma\left(\frac{1}{2}\right)}{\Gamma\left(l+\frac{3}{2}\right)}.
 \end{equation}
 Then we can use the ladder operator to get $Y_l^m$. Check details in the reference.
+
+
+\subsection{Addition of Angular Momenta}
+Consider two independent state $\ket{\alpha}$, $\ket{\beta}$, we can see them as a state $\ket{\alpha,\beta}$,
+\begin{equation}
+    \ket{\alpha,\beta}=\ket{\alpha}\otimes\ket{\beta},
+\end{equation}
+When we are talking about
+\begin{equation}\label{13.56}
+    \mathbf{L}=\mathbf{L}_1+\mathbf{L}_2,
+\end{equation}
+we should understand it as 
+\begin{equation}
+    \mathbf{L}_1\otimes 1+ 1\otimes \mathbf{L}_2.
+\end{equation}
+Easy to check that \eqref{13.56} satisfies the commutation relation of angular momentum. But neither $\mathbf{L}_1+\mu\mathbf{L}_2$ nor $\lambda\left(\mathbf{L}_1+\mathbf{L}_2\right)$ ($\mu,\lambda\neq1$).
 \end{document}
