--- a/exercise/physics/Quantum Mechanics/HW6/QM HW6.tex
+++ b/exercise/physics/Quantum Mechanics/HW6/QM HW6.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\newcommand{\mydate}{October 14, 2025}
+\newcommand{\mydate}{October 26, 2025}
 \newcommand{\mytitle}{QM HW6}
 \title{\textbf{\mytitle}}
 \author{Jiete XUE}
@@ -325,9 +325,11 @@ That is
     \begin{equation}
         \dv{z} P^{|m|}_l=\left(1-z^2\right)^{\frac{|m|}{2}-1}\left[(1-z^2)\frac{\dd^{|m|+1}}{\dd{z^{|m|+1}}}P_l-z|m|\frac{\dd^{|m|}}{\dd{z}^{|m|}}P_l\right].
     \end{equation}
+    {\small
     \begin{equation}
         \frac{\dd^{|m|}}{\dd{z}^{|m|}}\left[(1-z^2)\frac{\dd{P_l}}{\dd{z}}\right]=(1-z^2)\frac{\dd^{|m|}}{\dd{z}^{|m|}}P_l-2|m|z\frac{\dd^{|m|-1}}{\dd{z}^{|m|-1}}\frac{\dd{P_l}}{\dd{z}}-|m|(|m|-1)\frac{\dd^{|m|-2}}{\dd{z}^{|m|-2}}\frac{\dd{P_l}}{\dd{z}}.
     \end{equation}
+    }
     By \eqref{6.11},
     \begin{equation}
         -l(l+1)\frac{\dd^{|m|}}{\dd{z}^{|m|}}P_l=\dv{z}\frac{\dd^{|m|}}{\dd{z}^{|m|}}\left[(1-z^2)\frac{\dd{P_l}}{\dd{z}}\right].
@@ -344,8 +346,35 @@ That is
     \begin{equation}
         \int_{-1}^{1}P_l^{|m|}P_{l'}^{|m|}\dd{z}=0.
     \end{equation}
+    (4) Let $\frac{\dd^{|m|}}{\dd{z}^{|m|}}$ map at \eqref{6.3}, we obtain, 
+    \begin{equation}
+        z\frac{\dd^{|m|}}{\dd{z}^{|m|}}P_l+|m|\frac{\dd^{m-1}}{\dd{z}^{m-1}}P_l=\frac{l+1}{2l+1}\frac{\dd^{|m|}}{\dd{z}^{|m|}}P_{l+1}+\frac{1}{2l+1}\frac{\dd^{|m|}}{\dd{z}^{|m|}}P_{l-1}.
+    \end{equation}
+    Map $\frac{\dd^{|m|-1}}{\dd{z}^{|m|-1}}$ at $P_{l+1}'-P_{l-1}=(2l+1)P_l$, and deduce the term with $\frac{\dd^{|m|-1}}{\dd{z}^{|m|-1}}$, we obtain,
+    \begin{equation}
+        zP_l^{|m|}=\frac{l+|m|}{2l+1}P_{l-1}^{|m|}+\frac{l-|m|+1}{2l+1}P_{l+1}^{|m|}.
+    \end{equation}
 \end{problem}
 \begin{problem}[Laguerre polynomials]
+    (1) 
+    \begin{equation}
+        \sum_{\nu=0}^{+\infty} \left[ a_{\nu+1}\nu(\nu+1) +2(l+1)a_{\nu+1}(\nu+1)-a_{\nu}\nu+\left(\lambda-l-1\right)a_{\nu} \right]\xi^{\nu}=0.
+    \end{equation}
+    \begin{equation}
+        a_{\nu+1}=\frac{\nu+l+1-\lambda}{(\nu+1)(2l+2+\nu)}a_{\nu}.
+    \end{equation}
+    \begin{equation}
+        u(\xi)=\sum_{\nu=0}^{+\infty}\prod_{m=0}^{\nu-1}\frac{m+l+1-\lambda}{(m+1)(2l+2+m)}\xi^\nu.
+    \end{equation}
+    (2) When $\nu$ gets large, we have
+    \begin{equation}
+        \frac{\nu+l+1-\lambda}{(\nu+1)(2l+2+\nu)}\sim O(\frac{1}{\nu}).
+    \end{equation}
+    Its action is like $\frac{1/(n+1)!}{1/n!}$, so in the general case,
+    \begin{equation}
+        u(\xi)\sim \ee^\xi.
+    \end{equation}
+    When there exists $\nu$, such that $\nu+l+1-\lambda=0$, then the following term will be zero, and $u$ becomes a polynomial. So $\lambda$ should be a integer lager than $l+1$.
     (3) One has 
     \begin{equation}
         \frac{\pa U}{\pa u}=\sum_{m=0}^{+\infty}\frac{L_{m+1}(\xi)}{m!}u ^m.
